--- a/KFLOP/FPGA/KanalogBuffer_RealBoard/KanalogBuffer_Real_tcl.html
+++ b/KFLOP/FPGA/KanalogBuffer_RealBoard/KanalogBuffer_Real_tcl.html
@@ -65,6 +65,14 @@ prj_run Export -impl kabuf_Real
 
 
 
+<A name="pn190314232410"></A><B><U><big>pn190314232410</big></U></B>
+#Start recording tcl command: 3/14/2019 23:24:07
+#Project Location: C:/Dan/Eng Projects/BP308/KFLOP/FPGA/KanalogBuffer_RealBoard; Project name: KanalogBuffer_Real
+prj_project open "C:/Dan/Eng Projects/BP308/KFLOP/FPGA/KanalogBuffer_RealBoard/KanalogBuffer_Real.ldf"
+#Stop recording: 3/14/2019 23:24:10
+
+
+
 <BR>
 <BR>
 <BR>
